--- a/src/main/resources/templates/list-jobs.html
+++ b/src/main/resources/templates/list-jobs.html
@@ -5,14 +5,22 @@
 <body>
 
 <div th:replace="fragments :: page-header"></div>
-
-<div class="container body-content">
-
-    <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
-
-    <!-- TODO #3 - Use the same list display from search.html -->
-
-</div>
-
+    <div class="container body-content">
+        <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+        <!-- TODO #3 - Use the same list display from search.html -->
+        <div th:each="job : ${jobs}">
+            <table class="job-listing">
+                <tr th:each="descriptor : ${job.entrySet()}">
+                    <td>
+                        <div th:text="${descriptor.getKey()}"></div>
+                    </td>
+                    <td>
+                        <div th:text="${descriptor.getValue()}"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </body>
+
 </html>
