--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -33,11 +33,23 @@
 
         <input type="submit" value="Search" />
     </form>
-
-    <hr />
-
     <!-- TODO #2 - Loop over jobs map to display all job fields -->
-
+    <div class="container body-content">
+        <h1 th:text="${#strings.capitalizeWords(title)}"></h1>
+        <!-- TODO #3 - Use the same list display from search.html -->
+        <div th:each="job : ${jobs}">
+            <table class="job-listing">
+                <tr th:each="descriptor : ${job.entrySet()}">
+                    <td>
+                        <div th:text="${descriptor.getKey()}"></div>
+                    </td>
+                    <td>
+                        <div th:text="${descriptor.getValue()}"></div>
+                    </td>
+                </tr>
+            </table>
+        </div>
+    </div>
 </div>
 
 </body>
